TP-1757-TP-1724 fix faulty date wrapping

--- a/public/themes/custom/palvelumanuaali/components/02-molecules/card/_card.scss
+++ b/public/themes/custom/palvelumanuaali/components/02-molecules/card/_card.scss
@@ -285,12 +285,12 @@ $card-font-small-heading: 15px;
 .field--name-field-date {
   display: flex;
   order: 5;
+  margin-bottom: $space;
   .field__item {
-    display: flex;
-    flex-wrap: wrap;
     time {
       &:nth-child(2) {
         width: 100%;
+        display: inline;
       }
     }
   }
